[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/images/Extra animations and enemies/Enemy sprites/barnacle.png" type="Texture" id=1]
[ext_resource path="res://assets/images/Bubbles.png" type="Texture" id=2]
[ext_resource path="res://assets/images/Extra animations and enemies/Enemy sprites/barnacle_bite.png" type="Texture" id=3]
[ext_resource path="res://Barnacle.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/BiteSound.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/BossFightMusic.mp3" type="AudioStream" id=6]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../../BubbleArea/BubbleBox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "bubbles"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("../../BubbleArea/BubbleBox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BubbleArea/BubbleBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TeethArea/TeethBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BiteSound:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "bite"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TeethArea/TeethBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BiteSound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.55, 1.25, 2.55, 3.25, 4.55, 5.25, 6.55, 7.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false ]
}

[sub_resource type="Animation" id=6]
resource_name = "shake"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -5, 0 ), Vector2( 5, 0 ), Vector2( -5, 0 ), Vector2( 5, 0 ), Vector2( -5, 0 ), Vector2( 5, 0 ), Vector2( -5, 0 ), Vector2( 5, 0 ), Vector2( -5, 0 ), Vector2( 5, 0 ), Vector2( -5, 0 ), Vector2( 5, 0 ), Vector2( -5, 0 ), Vector2( 5, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "spit"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 10 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.75, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.7463, 9.925 )

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=5]

[node name="BarnacleBoss" type="KinematicBody2D" groups=["boss"]]
scale = Vector2( 7, 7 )
z_index = 1
collision_layer = 4
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="BubbleSprite" type="Sprite" parent="Sprite"]
visible = false
position = Vector2( 1.16667, -102.833 )
scale = Vector2( 0.104762, 0.111694 )
z_index = -1
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 250, 0, 350, 1525 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite/BubbleSprite"]
anims/RESET = SubResource( 7 )
anims/bubbles = SubResource( 8 )

[node name="GeneralAnimation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/bite = SubResource( 3 )
anims/shake = SubResource( 6 )
anims/spit = SubResource( 9 )

[node name="BubbleArea" type="Area2D" parent="."]

[node name="BubbleBox" type="CollisionShape2D" parent="BubbleArea"]
position = Vector2( -0.333333, -86.4167 )
scale = Vector2( 1.675, 10 )
shape = SubResource( 1 )
disabled = true

[node name="TeethArea" type="Area2D" parent="."]

[node name="TeethBox" type="CollisionShape2D" parent="TeethArea"]
position = Vector2( 0, -16.9667 )
scale = Vector2( 1.675, 1 )
shape = SubResource( 1 )
disabled = true

[node name="GenericCollision" type="CollisionShape2D" parent="."]
scale = Vector2( 2.5, 2.85 )
shape = SubResource( 4 )

[node name="BiteSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 5.0
pitch_scale = 0.93
max_distance = 800.0
attenuation = 1.62451

[node name="BossMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -25.0

[node name="BossArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossArea"]
position = Vector2( 0, -100 )
scale = Vector2( 6, 13 )
shape = SubResource( 5 )

[node name="DamageTimerBoss" type="Timer" parent="."]
process_mode = 0
wait_time = 0.25

[node name="AttackWaitTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[connection signal="animation_finished" from="GeneralAnimation" to="." method="_on_GeneralAnimation_animation_finished"]
[connection signal="body_entered" from="BubbleArea" to="." method="_on_BubbleArea_body_entered"]
[connection signal="body_exited" from="BubbleArea" to="." method="_on_BubbleArea_body_exited"]
[connection signal="body_entered" from="TeethArea" to="." method="_on_TeethArea_body_entered"]
[connection signal="body_entered" from="BossArea" to="." method="_on_BossArea_body_entered"]
[connection signal="body_exited" from="BossArea" to="." method="_on_BossArea_body_exited"]
[connection signal="timeout" from="DamageTimerBoss" to="." method="_on_DamageTimerBoss_timeout"]
[connection signal="timeout" from="AttackWaitTimer" to="." method="_on_AttackWaitTimer_timeout"]
